@@ -1,3 +1,7 @@
+2007-10-12  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* library/console.tcl:          Use TkFixedFont and ttk widgets
+
 2007-10-12  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXDraw.c:	replace all (internal) use of QD region
